# vscodeext-er-dev

./: .c8rc  .eslintrc.json  .gitignore  .gitmodules  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  LICENSE  README.md  build.sh  erdev-extension.code-workspace  package.json  test.sh  webpack.config.js
.devcontainer/: devcontainer.json
.github/: dependabot.yaml  release.yml
.github/workflows/: release.yml
resources/: sample.config
resources/scripts/: .gitignore  deploy_ssh.sh  pack.sh  pack_cmake.sh  pack_python.sh  start_debugpy.sh
src/: api.ts  argspick.ts  cmakeexecution.ts  erdevexecutions.ts  erdevmodel.ts  erdevproviders.ts  erextension.ts  executiondispatch.ts  extension.ts  pythonexecution.ts  utils.ts  vscodeUtils.ts
src/test/: runTest.ts  utils.ts
src/test/suite/: extension.test.ts  index.ts
testwsp/: test.code-workspace
testwsp/proj1/: CMakeLists.txt  main.cpp  main2.cpp
testwsp/proj2/: CMakeLists.txt  library.cpp  library.h  main.cpp
testwsp/pyproj/: setup.cfg  setup.py
testwsp/pyproj_dhvenv/: setup.cfg  setup.py
testwsp/pyproj_wheel/: setup.cfg  setup.py
testwsp/pyproj_wheel/pyproj_wheel/: __init__.py  main.py
